# SQRS-MovieNight

./: .env.example  .gitignore  ARCH.md  CHANGES.md  CONTRIBUTING.md  Dockerfile  README.md  RECORDING_5.4.md  RECORDING_5.6.md  SECURITY.md  contributor_setup.sh  docker-compose.conjur.yaml  docker-compose.yaml  load_tests.py  movie_night.db  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh
.github/workflows/: quality-gates.yaml
SSD_project_docs/: SECURITY.md
infra/conjur/: README.md  bootstrap.sh
infra/conjur/conf/: default.conf
scripts/: demo_get_key.py  demo_get_key.sh  demo_get_key_via_proxy.sh  demo_sync_key_from_vault.sh
src/movienight/: __init__.py  main.py
src/movienight/api/: auth_authorization_header.py  auth_claims.py  auth_compact_jwt.py  auth_credentials_required.py  auth_current_user_loader.py  auth_identity_from_token.py  auth_int_claim.py  (+38 more)
src/proxy/: conjur_token  connection_provider.py  main.py  vault_token
streamlit_app/: app.py
streamlit_app/frontend/: api.py  components.py  config.py  state.py
streamlit_app/pages/: 1_Login.py  2_Home.py  3_Create_Proposal.py  4_Profile.py  5_Card_Catalog.py
tests/: catalog.py  conftest.py  schedule.py  test_catalog.py  test_home.py  test_proposals.py  test_reactions.py  test_schedule.py  test_votes.py
tests/auth/: conftest.py  test_login.py  test_logout.py  test_me.py  test_register.py
tests/proposals/: conftest.py  test_create_proposals.py  test_delete_proposals.py
tests/votes/: conftest.py  test_create_vote.py  test_remove_vote.py
vault/policies/: sqlite-key-policy.hcl
(+357 files in other folders)
