[tool.poetry]
name = "movie-night"
version = "0.1.0"
description = "Movie Night backend skeleton for SQR project"
authors = ["OpenAI <example@example.com>"]
readme = "README.md"
packages = [{ include = "movienight", from = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.8.0"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}
PyJWT = "^2.10.1"
python-multipart = "^0.0.20"
streamlit = "^1.56.0"
requests = "^2.33.1"
httpx = "^0.28.1"
argon2-cffi = "^25.1.0"
freezegun = "^1.5.5"
hvac = "^2.4.0"
sqlcipher3 = "^0.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
flake8 = "^7.1.2"
bandit = "^1.8.3"
radon = "^6.0.1"
locust = "^2.37.10"
httpx = "^0.28.1"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
movie-night = "movienight.main:run"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"